# AsyncHttpServer

./: .gitignore  CMakeLists.txt  README.md  TASK.md
include/core/: ConnectionContext.hpp  IoCompletionPort.hpp  OverlappedContext.hpp  ThreadPool.hpp  WinsockInit.hpp
include/handlers/: DataHandler.hpp  IRequestHandler.hpp  InfoHandler.hpp
include/http/: HttpParser.hpp  HttpRequest.hpp  HttpResponse.hpp  HttpRouter.hpp  HttpStatus.hpp
include/security/: SchannelContext.hpp  TlsConnection.hpp
include/server/: HttpServer.hpp
include/storage/: ThreadSafeStore.hpp
include/utils/: ErrorHandler.hpp  Logger.hpp  SystemInfo.hpp
src/: main.cpp
src/core/: ConnectionContext.cpp  IoCompletionPort.cpp  OverlappedContext.cpp  ThreadPool.cpp  WinsockInit.cpp
src/handlers/: DataHandler.cpp  InfoHandler.cpp
src/http/: HttpParser.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpRouter.cpp
src/security/: SchannelContext.cpp  TlsConnection.cpp
src/server/: HttpServer.cpp
src/storage/: ThreadSafeStore.cpp
src/utils/: ErrorHandler.cpp  Logger.cpp  SystemInfo.cpp
tests/: CMakeLists.txt
tests/integration/: ServerIntegrationTests.cpp
tests/unit/: ErrorHandlerTests.cpp  HttpParserTests.cpp  HttpRequestTests.cpp  HttpResponseTests.cpp  HttpRouterTests.cpp  HttpStatusTests.cpp  HttpsServerConfigTests.cpp  InputValidationTests.cpp  LoggerTests.cpp  SchannelContextTests.cpp  SystemInfoTests.cpp  ThreadSafeStoreTests.cpp  TlsConnectionTests.cpp
